<resources>
    <string name="app_name">Food APP</string>
    <string name="welcome_to_food_app">Welcome To Food APP</string>
    <string name="food_is_not_just_fuel_its_an_experiance">Food is not Just fuel its an experiance</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="foodator">Foodator</string>
    <string name="food_delivery_app">Food Delivery App</string>
    <string name="get_started">Get Started</string>
    <string name="email_adress">Email adress</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="welcome">Welcome</string>
    <string name="ator">ator</string>
    <string name="search_food">Search Food...</string>
    <string name="today_s_best_food">Today\'s best Food</string>
    <string name="view_all">VIEW ALL</string>
    <string name="title">Title</string>
    <string name="_4">4</string>
    <string name="add">+</string>
    <string name="_50">$50</string>
    <string name="time">Time</string>
    <string name="_0">$0</string>
    <string name="_5">5</string>
    <string name="khaled_assidi">Khaled Assidi</string>
    <string name="_40">$40</string>
    <string name="_5_rating">5 Rating</string>
    <string name="_15_min">15 min</string>
    <string name="pizza_margherita_or_margherita_pizza_is_a_typical_neapolitan_pizza_roundish_in_shape_with_a_raised_edge_and_garnished_with_hand_crushed_peeled_tomatoes_mozzarella_buffalo_mozzarella_or_fior_di_latte_fresh_basil_leaves_and_extra_virgin_olive_oil_the_dough_is_made_by_mixing_water_salt_and_yeast">Pizza Margherita or Margherita pizza is a typical Neapolitan pizza, roundish in shape with a raised edge and garnished with hand-crushed peeled tomatoes, mozzarella buffalo mozzarella or fior di latte, fresh basil leaves, and extra virgin olive oil. The dough is made by mixing water, salt and yeast</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_0number">0</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_0dollar">$0</string>
    <string name="total_price">Total Price</string>
    <string name="_1">1</string>
    <string name="_10">10</string>
    <string name="piece">piece</string>
    <string name="details">Details</string>
    <string name="cart">cart</string>
</resources>