<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/colapsing_toolbar"
            android:layout_width="match_parent"
            app:titleTextColor="@color/black"
            android:background="@color/white"
            android:layout_height="match_parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>



    </com.google.android.material.appbar.AppBarLayout>










        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:background="@color/white"
            android:clipToPadding="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_item"
                        android:layout_width="match_parent"
                        android:layout_height="280dp"
                        android:background="@color/white"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/title_item"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title"
                        android:textColor="@color/blue_grey"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/price_item"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_40"
                        android:textColor="@color/orange"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_piece"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/piece"
                        android:textColor="@color/blue_grey" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp">

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:progressTint="@color/rating_color"
                        android:rating="3.5"
                        android:stepSize="0.1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_rating"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/ratingBar"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/image_clock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/time"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/orange" />

                    <TextView
                        android:id="@+id/time_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/_15_min"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/image_clock"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/text_detals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/details"
                    android:textColor="@color/blue_grey"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/details_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/pizza_margherita_or_margherita_pizza_is_a_typical_neapolitan_pizza_roundish_in_shape_with_a_raised_edge_and_garnished_with_hand_crushed_peeled_tomatoes_mozzarella_buffalo_mozzarella_or_fior_di_latte_fresh_basil_leaves_and_extra_virgin_olive_oil_the_dough_is_made_by_mixing_water_salt_and_yeast"
                    android:textColor="#7B000000"/>

                <TextView
                    android:id="@+id/specialinstuction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/blue_grey"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="16dp"                    android:text="Any special instruction?" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="Tell us here."
                    android:inputType="text"
                    android:padding="7dp"
                    android:textSize="12sp"
                    android:background="@drawable/background_tell_us"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="205dp">

                    </View>

            </LinearLayout>



        </androidx.core.widget.NestedScrollView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/grey_background"
        android:layout_gravity="bottom"
        android:padding="5dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contact_quntity"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/minus_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="━"
                android:textColor="@color/orange"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/number_item"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/number_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLength="5"
                android:maxLines="1"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/plus_item"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/minus_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.478" />

            <TextView
                android:id="@+id/plus_item"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/plus"
                android:textColor="@color/orange"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/number_item"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_to_card_btn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/add_to_cart"
                android:visibility="gone"
                style="@android:style/Widget.Button"
                android:background="@drawable/orange_button"
                android:drawableStart="@drawable/cart"
                android:paddingStart="16dp"
                android:textColor="@color/white"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/total_price_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/total_price"
                android:textColor="@color/blue_grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/price_item_detals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:maxLength="10"
                android:textColor="@color/blue_grey"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/add_to_card_btn"
                app:layout_constraintStart_toStartOf="@id/total_price_txt"
                app:layout_constraintTop_toBottomOf="@id/total_price_txt" />
        </androidx.constraintlayout.widget.ConstraintLayout>





    </LinearLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>