<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fastScrollEnabled="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_intro_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:srcCompat="@drawable/logo1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food"
                    android:textSize="45sp"
                    android:textColor="@color/blue_grey"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ator"
                    android:textSize="45sp"
                    android:textColor="@color/blue_grey"
                    android:textStyle="bold"/>
            </LinearLayout>

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittextbackground"
                android:ems="10"
                android:inputType="text"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:textColor="@color/blue_grey"
                android:layout_marginEnd="32dp"
                android:textAlignment="center"
                android:textColorHint="@color/blue_grey"
                android:textSize="16sp"
                android:hint="@string/email_adress"/>
            <EditText
                android:id="@+id/editTextText_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittextbackground"
                android:ems="10"
                android:textColor="@color/blue_grey"
                android:inputType="textPassword"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textAlignment="center"
                android:textColorHint="@color/blue_grey"
                android:textSize="16sp"
                android:hint="@string/password"/>
            <TextView
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="erro"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textAlignment="center"
                android:visibility="invisible"
                android:textColor="@color/red">

            </TextView>





            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:background="@drawable/button_orange"
                android:layout_margin="32dp"
                style="@style/Widget.AppCompat.Button"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatButton>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/are_you_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="are you a member?"
                    android:textSize="16sp"
                    android:textColor="@color/blue_grey"/>

                <TextView
                    android:id="@+id/text_login_in_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/orange"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>