<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.IntroActivity">



    <ImageView
        android:id="@+id/image_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background_intro" />

    <ImageView
        android:id="@+id/intro_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/intro_pic"
        app:layout_constraintBottom_toBottomOf="@+id/image_background"
        app:layout_constraintEnd_toEndOf="@+id/image_background"
        app:layout_constraintStart_toStartOf="@+id/image_background"
        app:layout_constraintTop_toTopOf="@+id/image_background" />


    <TextView
        android:id="@+id/text_deliveryapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/purpule"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_image" />
    <View
        android:id="@+id/view_intro"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/image_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </View>

    <TextView
        android:id="@+id/login_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/login"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:textSize="16sp">

    </TextView>

    <TextView
        android:id="@+id/signup_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/signup"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:textSize="16sp">

    </TextView>





</androidx.constraintlayout.widget.ConstraintLayout>